--- a/recipe-recognition-bot/docker-compose.yml
+++ b/recipe-recognition-bot/docker-compose.yml
@@ -1,6 +1,23 @@
 version: '3.8'
 
 services:
+  bot:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        OPENAI_API_KEY: ${OPENAI_API_KEY}
+        TELEGRAM_TOKEN: ${TELEGRAM_TOKEN}
+    env_file:
+      - .env
+    restart: always
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - bot-network
+
+
   postgres:
     image: postgres:16-alpine
     restart: always
@@ -19,24 +36,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
-  bot:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    restart: always
-    depends_on:
-      postgres:
-        condition: service_healthy
-    environment:
-      - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - POSTGRES_URI=postgres://recipebot:recipebot_password@postgres:5432/recipebot
-      - LOG_LEVEL=info
-      - APP_ENVIRONMENT=production
-      - MAX_RECIPES_PER_USER=50
-    networks:
-      - bot-network
 
 networks:
   bot-network:
