--- a/recipe-recognition-bot/Dockerfile
+++ b/recipe-recognition-bot/Dockerfile
@@ -3,19 +3,14 @@ FROM golang:1.23.4-alpine AS builder
 
 RUN apk add --no-cache git build-base gcc
 
-# Устанавливаем необходимые зависимости
-RUN apk add --no-cache git
-
-# Устанавливаем рабочую директорию
 WORKDIR /app
 
 # Копируем go.mod и go.sum
 COPY go.mod go.sum ./
-
-# Скачиваем все зависимости
 RUN go mod download
 
-COPY . /.env
+# Копируем env-файл
+COPY .env .env
 
 # Копируем исходный код
 COPY . .
@@ -30,26 +25,19 @@ RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o bot ./cmd/bot
 # Этап финальной сборки
 FROM alpine:latest
 
-# Устанавливаем необходимые пакеты
 RUN apk --no-cache add ca-certificates tzdata
-
-# Создаем пользователя без привилегий
 RUN adduser -D -g '' appuser
 
-# Устанавливаем рабочую директорию
 WORKDIR /app
 
-# Копируем двоичный файл из этапа сборки
+# Копируем бинарник и миграции
 COPY --from=builder /app/bot .
-
-# Копируем миграции базы данных
 COPY --from=builder /app/migrations ./migrations
 
-# Устанавливаем владельца файлов
-RUN chown -R appuser:appuser /app
+# Копируем .env (на финальном этапе!)
+COPY --from=builder /app/.env .env
 
-# Переключаемся на пользователя без привилегий
+RUN chown -R appuser:appuser /app
 USER appuser
 
-# Запускаем приложение
 CMD ["./bot"]
